--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: wu-kan # 站点标题
+title: homepage # 站点标题
 description: | # 头像背后的信息（html格式），<br/>代表换行
-  SYSU第6年<br/>
-  水野爱<br/>
-  田宫例四驱车<br/>
+  在上学<br/>
   <a href="mailto:i@wu-kan.cn">
     <i class="fa-solid fa-envelope"></i>
   </a>
